--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <body class="pb-32">
 
     <header class="p-4 h-[80px] flex items-center justify-center">
-        <img src="https://via.placeholder.com/180x60?text=Logo+Space" class="w-[180px] h-[60px] object-contain">
+        <img src="logo.jpg" class="w-[180px] h-[60px] object-contain">
     </header>
 
     <div class="hero-section">
