--- a/developer.html
+++ b/developer.html
@@ -13,19 +13,17 @@
         }
         body { background-color: var(--deep-bg); font-family: 'SolaimanLipi', sans-serif; margin: 0; padding: 0; overflow-x: hidden; }
 
-        /* হেডার ডিজাইন */
         .header-gradient {
             background: linear-gradient(135deg, var(--khoiri) 0%, #b30000 100%);
             border-radius: 0 0 60px 60px;
-            padding: 60px 20px 180px 20px; /* প্যাডিং বাড়িয়ে হেডার বড় করা হয়েছে */
+            padding: 60px 20px 180px 20px;
             text-align: center;
             color: white;
             position: relative;
         }
 
-        /* প্রোফাইল কন্টেইনার - অনেক নিচে নামানো হয়েছে */
         .profile-container {
-            margin-top: -100px; /* কার্ডটিকে হেডারের নিরাপদ দূরত্বে নিচে সেট করা হয়েছে */
+            margin-top: -100px;
             padding: 0 25px;
             display: flex;
             flex-direction: column;
@@ -43,7 +41,6 @@
             z-index: 10;
         }
 
-        /* ছবির পজিশন ও পালস এনিমেশন */
         .img-wrapper {
             position: absolute;
             top: -65px; 
@@ -81,7 +78,6 @@
             100% { transform: scale(1.9); opacity: 0; }
         }
 
-        /* সোশ্যাল বাটন এনিমেশন */
         .social-buttons {
             display: none;
             flex-direction: column;
@@ -122,30 +118,20 @@
             margin-top: 15px;
             box-shadow: 0 10px 20px rgba(128,0,0,0.3);
             transition: 0.4s;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-left: auto;
-            margin-right: auto;
+            display: flex; align-items: center; gap: 10px; margin-left: auto; margin-right: auto;
         }
 
         .bio-box {
-            background: white;
-            border-radius: 35px;
-            padding: 30px;
-            margin-top: 30px;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.03);
-            color: #444;
-            line-height: 1.8;
-            text-align: center;
-            border: 1px solid #fdfdfd;
+            background: white; border-radius: 35px; padding: 30px; margin-top: 30px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.03); color: #444; line-height: 1.8;
+            text-align: center; border: 1px solid #fdfdfd;
         }
     </style>
 </head>
 <body>
 
     <div class="header-gradient">
-        <button onclick="window.location.href='index.html'" class="absolute left-6 top-12 text-white active:scale-90 transition">
+        <button onclick="window.history.back()" class="absolute left-6 top-12 text-white active:scale-90 transition">
             <i class="fas fa-arrow-left text-xl"></i>
         </button>
         <h2 class="text-2xl font-bold mt-4">ডেভেলপার প্রোফাইল</h2>
@@ -156,12 +142,12 @@
         <div class="profile-card">
             <div class="img-wrapper">
                 <div class="pulse-ring"></div>
-                <img src="https://via.placeholder.com/150" alt="Developer" class="profile-img">
+                <img id="devImg" src="https://via.placeholder.com/150" alt="Developer" class="profile-img">
             </div>
             
             <div class="mt-8">
-                <h2 class="text-2xl font-bold text-gray-800">মোঃ আফিফাত ইসলাম</h2>
-                <p class="text-sm text-red-700 font-semibold mb-6">ফুল-স্ট্যাক ওয়েব ডেভেলপার</p>
+                <h2 id="devName" class="text-2xl font-bold text-gray-800">লোড হচ্ছে...</h2>
+                <p id="devDesignation" class="text-sm text-red-700 font-semibold mb-6">লোড হচ্ছে...</p>
             </div>
 
             <button id="mainBtn" onclick="toggleSocial()" class="reveal-btn active:scale-95">
@@ -169,13 +155,13 @@
             </button>
 
             <div id="socialBox" class="social-buttons">
-                <a href="https://facebook.com/yourlink" class="social-link fb" style="transition-delay: 0.1s;">
+                <a id="fbLink" href="#" class="social-link fb" style="transition-delay: 0.1s;">
                     <i class="fab fa-facebook-f"></i> ফেসবুক প্রোফাইল
                 </a>
-                <a href="https://wa.me/8801700000000" class="social-link wa" style="transition-delay: 0.2s;">
+                <a id="waLink" href="#" class="social-link wa" style="transition-delay: 0.2s;">
                     <i class="fab fa-whatsapp"></i> হোয়াটসঅ্যাপ চ্যাট
                 </a>
-                <a href="https://github.com/yourlink" class="social-link gh" style="transition-delay: 0.3s;">
+                <a id="ghLink" href="#" class="social-link gh" style="transition-delay: 0.3s;">
                     <i class="fab fa-github"></i> GitHub প্রোফাইল
                 </a>
             </div>
@@ -188,6 +174,32 @@
     </div>
 
     <script>
+        // আপনার অ্যাপস স্ক্রিপ্ট লিঙ্ক এখানে বসান
+        const scriptURL = "আপনার_অ্যাপস_স্ক্রিপ্ট_ইউআরএল_এখানে_দিন";
+
+        // পেজ লোড হওয়ার সময় শিট থেকে ডেভেলপার ডাটা আনা
+        async function fetchDeveloperData() {
+            try {
+                // আমরা সরাসরি doGet এর সাহায্য নিচ্ছি যা ডেভেলপার ডাটা দেয়
+                const response = await fetch(`${scriptURL}?action=getDeveloper`);
+                const data = await response.json();
+
+                if(data) {
+                    document.getElementById('devName').innerText = data.name;
+                    document.getElementById('devDesignation').innerText = "সফটওয়্যার ডেভেলপার"; // পদবী শিট থেকে না আসলে এটি থাকবে
+                    document.getElementById('devImg').src = data.image || "https://via.placeholder.com/150";
+                    
+                    // সোশ্যাল লিঙ্ক আপডেট
+                    document.getElementById('fbLink').href = data.fb;
+                    document.getElementById('waLink').href = "https://wa.me/" + data.wa;
+                    document.getElementById('ghLink').href = data.gh || "#";
+                }
+            } catch (error) {
+                console.error("ডেভেলপার ডাটা আনতে সমস্যা হয়েছে:", error);
+                document.getElementById('devName').innerText = "মোঃ আফিফাত ইসলাম";
+            }
+        }
+
         function toggleSocial() {
             const box = document.getElementById('socialBox');
             const text = document.getElementById('btnText');
@@ -205,6 +217,9 @@
                 icon.className = 'fas fa-times';
             }
         }
+
+        // পেজ লোড হলেই ডাটা কল হবে
+        window.onload = fetchDeveloperData;
     </script>
 </body>
 </html>
