--- a/group.html
+++ b/group.html
@@ -104,7 +104,7 @@
 
     <script>
         // আপনার অ্যাপস স্ক্রিপ্ট লিঙ্ক এখানে বসান
-        const scriptURL = "আপনার_অ্যাপস_স্ক্রিপ্ট_ইউআরএল_এখানে_দিন";
+        const scriptURL = "https://script.google.com/macros/s/AKfycbx_oBrfXfXOWOhs8RxX9aj-OV1TAQeyPwEKX_Y3vM9_Hg4qenrtzdXrXu4_2CFlYA6EBw/exec";
 
         async function loadGroups() {
             try {
